[metadata]
name = TheOpenDataStack
version = 0.1.0
description = Build end to end data products with open source tools
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    dagster==1.10.2
    dagster-dbt==0.26.2
    dagster-duckdb>=0.26.2
    dagster-webserver==1.10.2
    dbt-core>=1.8.7
    dbt-duckdb>=1.8.3
    duckdb==1.0.0
    polars>=1.8.0
    pyarrow>=17.0.0
    python-dotenv>=1.0.1
    python-slugify>=8.0.4
    requests>=2.32.3
    tenacity>=9.0.0
    ruff>=0.6.7
    httpx<0.25.0
    flash>=1.0.3

[options.packages.find]
where = .
include =
    pipeline*

